--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
     }
 
     .input-ajustado {
-      padding-top: 14px;
-      padding-bottom: 14px;
+      padding: 10px 12px;
     }
 
     .input-estilo:focus {
