--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
     }
 
     .input-ajustado {
-      padding: 10px 12px;
+      padding-top: 9px;
+      padding-bottom: 9px;
     }
 
     .input-estilo:focus {
