--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ingreso de Equipos - Acciona</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(to bottom, #2b2b2b, #1a1a1a);
@@ -21,7 +25,7 @@
       padding: 25px;
       border-radius: 18px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
-      max-width: 460px;
+      max-width: 480px;
       width: 100%;
       border: 1px solid #555;
     }
@@ -56,7 +60,7 @@
     label {
       display: block;
       margin-top: 14px;
-      margin-bottom: 6px; /* Espacio entre etiqueta y campo */
+      margin-bottom: 6px; /* ESPACIADO AÑADIDO AQUÍ */
       font-weight: bold;
       color: #ddd;
       font-size: 14px;
@@ -68,14 +72,15 @@
 
     .input-estilo {
       width: 100%;
-      padding: 14px 12px;
+      min-height: 42px;
+      padding: 10px 12px;
       border-radius: 6px;
       border: 1px solid #666;
-      font-size: 16px;
+      font-size: 14px;
       background-color: #1e1e1e;
       color: #fff;
-      box-sizing: border-box;
       transition: border-color 0.3s, box-shadow 0.3s;
+      resize: none;
     }
 
     .input-estilo:focus {
@@ -117,7 +122,6 @@
       background-color: #fff3cd;
       color: #856404;
       border: 1px solid #ffeeba;
-      transition: all 0.3s ease;
     }
 
     .btn {
@@ -163,7 +167,6 @@
     </div>
 
     <h1>Formulario de Ingreso de Equipos (Base Acciona)</h1>
-
     <div class="datetime-box" id="datetime"></div>
 
     <div class="section">
@@ -220,8 +223,10 @@
 
     function actualizarFechaHora() {
       const now = new Date();
-      const opciones = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric',
-        hour: '2-digit', minute: '2-digit', second: '2-digit' };
+      const opciones = {
+        weekday: 'long', year: 'numeric', month: 'long',
+        day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit'
+      };
       document.getElementById("datetime").innerText = now.toLocaleDateString('es-CL', opciones);
     }
     actualizarFechaHora();
