--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom, #2b2b2b, #1a1a1a);
+      background-color: #c62828; /* ← FONDO CAMBIADO */
       color: #e0e0e0;
       display: flex;
       flex-direction: column;
@@ -60,7 +60,7 @@
     label {
       display: block;
       margin-top: 14px;
-      margin-bottom: 6px; /* ESPACIADO AÑADIDO AQUÍ */
+      margin-bottom: 6px;
       font-weight: bold;
       color: #ddd;
       font-size: 14px;
