--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #c62828; /* ← FONDO CAMBIADO */
+      background-color: #c62828;
       color: #e0e0e0;
       display: flex;
       flex-direction: column;
@@ -21,13 +21,13 @@
     }
 
     .container {
-      background-color: #333;
+      background-color: #444;
       padding: 25px;
       border-radius: 18px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
       max-width: 480px;
       width: 100%;
-      border: 1px solid #555;
+      border: 1px solid #888;
     }
 
     .logo-wrapper {
@@ -75,9 +75,9 @@
       min-height: 42px;
       padding: 10px 12px;
       border-radius: 6px;
-      border: 1px solid #666;
+      border: 1px solid #888;
       font-size: 14px;
-      background-color: #1e1e1e;
+      background-color: #2c2c2c;
       color: #fff;
       transition: border-color 0.3s, box-shadow 0.3s;
       resize: none;
@@ -90,8 +90,8 @@
     }
 
     .datetime-box {
-      background-color: #444;
-      border: 1px solid #666;
+      background-color: #555;
+      border: 1px solid #888;
       padding: 10px;
       text-align: center;
       border-radius: 8px;
