--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #c62828;
-      color: #e0e0e0;
+      background-color: #f4f4f4;
+      color: #222;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -21,13 +21,13 @@
     }
 
     .container {
-      background-color: #444;
+      background-color: #ffffff;
       padding: 25px;
       border-radius: 18px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
       max-width: 480px;
       width: 100%;
-      border: 1px solid #888;
+      border: 1px solid #ccc;
     }
 
     .logo-wrapper {
@@ -39,10 +39,8 @@
     .logo {
       max-width: 120px;
       padding: 6px;
-      background-color: rgba(0, 0, 0, 0.3);
-      border: 1px solid rgba(255, 255, 255, 0.12);
+      background-color: rgba(0, 0, 0, 0.05);
       border-radius: 6px;
-      box-shadow: 0 0 6px rgba(255, 255, 255, 0.05);
       transition: transform 0.3s ease;
     }
 
@@ -52,7 +50,7 @@
 
     h1 {
       font-size: 22px;
-      color: #fff;
+      color: #111;
       text-align: center;
       margin-bottom: 20px;
     }
@@ -62,7 +60,7 @@
       margin-top: 14px;
       margin-bottom: 6px;
       font-weight: bold;
-      color: #ddd;
+      color: #333;
       font-size: 14px;
     }
 
@@ -75,30 +73,30 @@
       min-height: 42px;
       padding: 10px 12px;
       border-radius: 6px;
-      border: 1px solid #888;
+      border: 1px solid #ccc;
       font-size: 14px;
-      background-color: #2c2c2c;
-      color: #fff;
+      background-color: #fafafa;
+      color: #000;
       transition: border-color 0.3s, box-shadow 0.3s;
       resize: none;
     }
 
     .input-estilo:focus {
       border-color: #c62828;
-      box-shadow: 0 0 5px rgba(198, 40, 40, 0.5);
+      box-shadow: 0 0 5px rgba(198, 40, 40, 0.4);
       outline: none;
     }
 
     .datetime-box {
-      background-color: #555;
-      border: 1px solid #888;
+      background-color: #f0f0f0;
+      border: 1px solid #ccc;
       padding: 10px;
       text-align: center;
       border-radius: 8px;
       margin-bottom: 18px;
       font-weight: bold;
-      color: #f0f0f0;
       font-size: 14px;
+      color: #222;
     }
 
     .alert-box {
@@ -108,13 +106,14 @@
       text-align: center;
       margin-top: 10px;
       padding: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       font-size: 13px;
     }
 
     .alert-red {
-      background-color: #a30000;
-      color: #fff;
+      background-color: #f8d7da;
+      color: #721c24;
+      border: 1px solid #f5c6cb;
       white-space: pre-line;
     }
 
@@ -140,7 +139,7 @@
     .btn:hover {
       background-color: #b71c1c;
       transform: scale(1.03);
-      box-shadow: 0 0 12px rgba(255, 0, 0, 0.25);
+      box-shadow: 0 0 12px rgba(255, 0, 0, 0.2);
     }
 
     .spinner {
