--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ingreso de Equipos - Acciona</title>
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f4f4f4;
@@ -16,6 +19,7 @@
       padding: 30px 15px;
       margin: 0;
     }
+
     .container {
       background-color: #ffffff;
       padding: 25px;
@@ -25,11 +29,13 @@
       width: 100%;
       border: 1px solid #ccc;
     }
+
     .logo-wrapper {
       display: flex;
       justify-content: center;
       margin-bottom: 20px;
     }
+
     .logo {
       max-width: 120px;
       padding: 6px;
@@ -37,13 +43,18 @@
       border-radius: 6px;
       transition: transform 0.3s ease;
     }
-    .logo:hover { transform: scale(1.03); }
+
+    .logo:hover {
+      transform: scale(1.03);
+    }
+
     h1 {
-      font-size: 20px;
+      font-size: 22px;
       color: #111;
       text-align: center;
       margin-bottom: 20px;
     }
+
     label {
       display: block;
       margin-top: 14px;
@@ -52,7 +63,11 @@
       color: #333;
       font-size: 14px;
     }
-    .section { margin-bottom: 20px; }
+
+    .section {
+      margin-bottom: 20px;
+    }
+
     .input-estilo {
       width: 100%;
       min-height: 42px;
@@ -65,11 +80,13 @@
       transition: border-color 0.3s, box-shadow 0.3s;
       resize: none;
     }
+
     .input-estilo:focus {
       border-color: #c62828;
       box-shadow: 0 0 5px rgba(198, 40, 40, 0.4);
       outline: none;
     }
+
     .datetime-box {
       background-color: #f0f0f0;
       border: 1px solid #ccc;
@@ -81,6 +98,7 @@
       font-size: 14px;
       color: #222;
     }
+
     .alert-box {
       display: none;
       border-radius: 6px;
@@ -91,17 +109,20 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       font-size: 13px;
     }
+
     .alert-red {
       background-color: #f8d7da;
       color: #721c24;
       border: 1px solid #f5c6cb;
       white-space: pre-line;
     }
+
     .alert-yellow {
       background-color: #fff3cd;
       color: #856404;
       border: 1px solid #ffeeba;
     }
+
     .btn {
       background-color: #c62828;
       color: #fff;
@@ -114,11 +135,13 @@
       width: 100%;
       margin-top: 18px;
     }
+
     .btn:hover {
       background-color: #b71c1c;
       transform: scale(1.03);
       box-shadow: 0 0 12px rgba(255, 0, 0, 0.2);
     }
+
     .spinner {
       display: inline-block;
       width: 15px;
@@ -130,6 +153,7 @@
       vertical-align: middle;
       margin-right: 6px;
     }
+
     @keyframes spin {
       to { transform: rotate(360deg); }
     }
@@ -141,15 +165,189 @@
       <img class="logo" src="https://raw.githubusercontent.com/acciona-airport/Zarpes-acciona-aero/main/LogoAcciona2.png" alt="Logo Acciona" />
     </div>
 
-    <h1>Ingreso de Equipos - Acciona</h1>
+    <h1>Formulario de Ingreso de Equipos (Base Acciona)</h1>
     <div class="datetime-box" id="datetime"></div>
 
-    <!-- Resto del formulario idéntico -->
-    <!-- (por brevedad lo omitimos si no cambió) -->
+    <div class="section">
+      <label for="rut-conductor">RUT del conductor:</label>
+      <input type="text" class="input-estilo" id="rut-conductor" onblur="buscarDatosConductor()" placeholder="Ej: 12345678-9" />
+    </div>
 
+    <div class="section">
+      <label>Nombre conductor:</label>
+      <div class="input-estilo" id="datos-conductor"></div>
+    </div>
+
+    <div class="section" id="manual-conductor-section" style="display:none;">
+      <label for="nombre-manual">Ingrese nombre manualmente:</label>
+      <input type="text" class="input-estilo" id="nombre-manual" placeholder="Nombre del conductor" />
+    </div>
+
+    <div class="section">
+      <label for="numero-equipo">Número de equipo:</label>
+      <input type="text" class="input-estilo" id="numero-equipo" onblur="buscarDatosEquipo()" placeholder="Ej: 51125" />
+    </div>
+
+    <div class="section">
+      <label>Familia:</label>
+      <div class="input-estilo" id="familia-equipo"></div>
+    </div>
+
+    <div class="section">
+      <label>¿Habilitado?</label>
+      <div class="input-estilo" id="status-equipo"></div>
+      <div class="alert-box alert-red" id="alerta-ingreso">
+        ❌ Equipo no habilitado para ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.
+      </div>
+      <div class="alert-box alert-yellow" id="alerta-carga-extra">
+        ⚠️ Ojo: Este equipo estaría habilitado solo a ingresar a cargar combustible o carga eléctrica.
+      </div>
+    </div>
+
+    <div class="section">
+      <label>Observaciones:</label>
+      <div class="input-estilo" id="observaciones-equipo"></div>
+    </div>
+
+    <div class="section">
+      <label for="guardia">Guardia fiscalizador:</label>
+      <input type="text" class="input-estilo" id="guardia" placeholder="Nombre del guardia" />
+    </div>
+
+    <button class="btn" onclick="enviarFormulario()">Enviar</button>
   </div>
 
-  <!-- Scripts JavaScript también se mantienen igual -->
+  <script>
+    const URL_GET = "https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec";
 
+    function actualizarFechaHora() {
+      const now = new Date();
+      const opciones = {
+        weekday: 'long', year: 'numeric', month: 'long',
+        day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit'
+      };
+      document.getElementById("datetime").innerText = now.toLocaleDateString('es-CL', opciones);
+    }
+    actualizarFechaHora();
+
+    async function buscarDatosConductor() {
+      const rut = document.getElementById("rut-conductor").value.trim();
+      const contenedor = document.getElementById("datos-conductor");
+      const manualSection = document.getElementById("manual-conductor-section");
+
+      if (!rut) {
+        contenedor.innerText = "";
+        manualSection.style.display = "none";
+        return;
+      }
+
+      contenedor.innerHTML = '<span class="spinner"></span>Buscando...';
+
+      try {
+        const response = await fetch(URL_GET + "?tipo=personal&id=" + encodeURIComponent(rut));
+        const data = await response.json();
+
+        if (data.error) {
+          contenedor.innerText = "❌ No encontrado.";
+          manualSection.style.display = "block";
+        } else {
+          contenedor.innerText = data.NOMBRE || "(sin nombre)";
+          manualSection.style.display = "none";
+        }
+      } catch {
+        contenedor.innerText = "❌ Error al buscar.";
+        manualSection.style.display = "block";
+      }
+    }
+
+    async function buscarDatosEquipo() {
+      const id = document.getElementById("numero-equipo").value.trim();
+      const familiaBox = document.getElementById("familia-equipo");
+      const statusBox = document.getElementById("status-equipo");
+      const obsBox = document.getElementById("observaciones-equipo");
+      const alerta = document.getElementById("alerta-ingreso");
+      const alertaAmarilla = document.getElementById("alerta-carga-extra");
+
+      if (!id) {
+        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "";
+        alerta.style.display = "none";
+        alertaAmarilla.style.display = "none";
+        return;
+      }
+
+      const loading = '<span class="spinner"></span>Buscando...';
+      familiaBox.innerHTML = statusBox.innerHTML = obsBox.innerHTML = loading;
+      alerta.style.display = "none";
+      alertaAmarilla.style.display = "none";
+
+      try {
+        const response = await fetch(URL_GET + "?tipo=equipo&id=" + encodeURIComponent(id));
+        const data = await response.json();
+
+        if (data.error) {
+          familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ No encontrado";
+        } else {
+          familiaBox.innerText = data.FAMILIA || "";
+          obsBox.innerText = data.OBSERVACIONES || "";
+          const status = (data["STATUS ✎"] || "").toLowerCase();
+
+          if (status === "operativo") {
+            statusBox.innerText = "❌ No habilitado";
+            alerta.style.display = "block";
+            alertaAmarilla.style.display = "block";
+          } else {
+            statusBox.innerText = "✅ Habilitado";
+          }
+        }
+      } catch {
+        familiaBox.innerText = statusBox.innerText = obsBox.innerText = "❌ Error";
+        alerta.style.display = "none";
+        alertaAmarilla.style.display = "none";
+      }
+    }
+
+    function enviarFormulario() {
+      const rut = document.getElementById("rut-conductor").value.trim();
+      const nombreManual = document.getElementById("nombre-manual").value.trim();
+      const nombre = document.getElementById("datos-conductor").innerText.includes("No encontrado") ? nombreManual : document.getElementById("datos-conductor").innerText.trim();
+      const equipo = document.getElementById("numero-equipo").value.trim();
+      const familia = document.getElementById("familia-equipo").innerText.trim();
+      const habilitado = document.getElementById("status-equipo").innerText.trim();
+      const observaciones = document.getElementById("observaciones-equipo").innerText.trim();
+      const guardia = document.getElementById("guardia").value.trim();
+
+      if (!rut || !nombre || !equipo || !guardia) {
+        alert("⚠️ Completa todos los campos obligatorios.");
+        return;
+      }
+
+      const form = document.createElement("form");
+      form.action = "https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse";
+      form.method = "POST";
+      form.target = "_self";
+
+      const campos = {
+        "entry.675531615": rut,
+        "entry.851525222": nombre,
+        "entry.1413809422": equipo,
+        "entry.783685052": familia,
+        "entry.10343893": habilitado,
+        "entry.2133373249": observaciones,
+        "entry.234162856": guardia
+      };
+
+      for (let name in campos) {
+        const input = document.createElement("input");
+        input.type = "hidden";
+        input.name = name;
+        input.value = campos[name];
+        form.appendChild(input);
+      }
+
+      document.body.appendChild(form);
+      form.submit();
+      alert("✅ Enviado correctamente.");
+    }
+  </script>
 </body>
 </html>
