--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
     </div>
 
     <div class="section">
-      <label>¿Habilitado?</label>
+      <label>¿Habilitado para ingresar?</label>
       <div class="input-estilo" id="status-equipo"></div>
       <div class="alert-box alert-red" id="alerta-ingreso">
-        ❌ Equipo no habilitado para ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.
+        ❌ Equipo no habilitado para el ingreso, contacte a Control Flota 📞 Tel: 56 9 3860 1767.
       </div>
       <div class="alert-box alert-yellow" id="alerta-carga-extra">
-        ⚠️ Ojo: Este equipo estaría habilitado solo a ingresar a cargar combustible o carga eléctrica.
+        ⚠️ Ojo: Este vehículo solo puede ingresar a la Base Acciona para abastecerse de combustible o para realizar una carga eléctrica.
       </div>
     </div>
 
