--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       box-shadow: 0 0 5px rgba(198, 40, 40, 0.4);
       outline: none;
     }
+    .input-manual {
+      background-color: #ffe5e5 !important;
+    }
     .datetime-box {
       background-color: #f0f0f0;
       border: 1px solid #ccc;
@@ -154,7 +157,7 @@
 
     <div class="section" id="manual-conductor-section" style="display:none;">
       <label for="nombre-manual">Ingrese nombre manualmente:</label>
-      <input type="text" class="input-estilo" id="nombre-manual" placeholder="Nombre del conductor" oninput="this.value = this.value.toUpperCase();" />
+      <input type="text" class="input-estilo input-manual" id="nombre-manual" placeholder="Nombre del conductor" oninput="this.value = this.value.toUpperCase();" />
     </div>
 
     <div class="section">
@@ -181,12 +184,12 @@
     <div class="section">
       <label>Observaciones:</label>
       <div class="input-estilo" id="observaciones-equipo"></div>
-      <textarea class="input-estilo" id="observaciones-manual" placeholder="Escriba observaciones aquí" style="display:none; margin-top: 10px;" oninput="this.value = this.value.toUpperCase();"></textarea>
+      <textarea class="input-estilo input-manual" id="observaciones-manual" placeholder="Escriba observaciones aquí" style="display:none; margin-top: 10px;" oninput="this.value = this.value.toUpperCase();"></textarea>
     </div>
 
     <div class="section">
       <label for="guardia">Guardia fiscalizador:</label>
-      <input type="text" class="input-estilo" id="guardia" placeholder="Nombre del guardia" />
+      <input type="text" class="input-estilo" id="guardia" placeholder="Nombre del guardia" oninput="this.value = this.value.toUpperCase();" />
     </div>
 
     <button class="btn" onclick="enviarFormulario()">Enviar</button>
