--- a/index.html
+++ b/index.html
@@ -200,11 +200,24 @@
 
     function actualizarFechaHora() {
       const now = new Date();
-      const opciones = {
-        weekday: 'long', year: 'numeric', month: 'long',
-        day: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit'
-      };
-      document.getElementById("datetime").innerText = now.toLocaleDateString('es-CL', opciones);
+      const dias = ['Domingo', 'Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado'];
+      const meses = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio',
+                     'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'];
+      const diaSemana = dias[now.getDay()];
+      const dia = now.getDate();
+      const mes = meses[now.getMonth()];
+      const año = now.getFullYear();
+
+      let hora = now.getHours();
+      const minutos = now.getMinutes().toString().padStart(2, '0');
+      const segundos = now.getSeconds().toString().padStart(2, '0');
+      const ampm = hora >= 12 ? 'P.M' : 'A.M';
+      hora = hora % 12 || 12;
+
+      const horaFormateada = `${hora}:${minutos}:${segundos} ${ampm}`;
+      const fechaFormateada = `${diaSemana}, ${dia} de ${mes} de ${año}, ${horaFormateada}`;
+
+      document.getElementById("datetime").innerText = fechaFormateada;
     }
     actualizarFechaHora();
 
@@ -333,7 +346,11 @@
 
       document.body.appendChild(form);
       form.submit();
-      alert("✅ Enviado correctamente.");
+
+      setTimeout(() => {
+        alert("✅ Enviado correctamente. Redirigiendo...");
+        window.location.reload();
+      }, 1000);
     }
   </script>
 </body>
