--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
     <div class="section">
       <label>Observaciones:</label>
       <div class="input-estilo" id="observaciones-equipo"></div>
-      <textarea class="input-estilo input-manual" id="observaciones-manual" placeholder="Escriba observaciones aquí" style="display:none; margin-top: 10px;" oninput="this.value = this.value.toUpperCase();"></textarea>
+      <textarea class="input-estilo input-manual" id="observaciones-manual" placeholder="Escriba observaciones aquí." style="display:none; margin-top: 10px;" oninput="this.value = this.value.toUpperCase();"></textarea>
     </div>
 
     <div class="section">
       <label for="guardia">Guardia fiscalizador:</label>
-      <input type="text" class="input-estilo" id="guardia" placeholder="Nombre del guardia" oninput="this.value = this.value.toUpperCase();" />
+      <input type="text" class="input-estilo" id="guardia" placeholder="Ingrese nombre del guardia." oninput="this.value = this.value.toUpperCase();" />
     </div>
 
     <button class="btn" onclick="enviarFormulario()">Enviar</button>
