--- a/index.html
+++ b/index.html
@@ -274,11 +274,7 @@
           } else {
             statusBox.innerText = "✅ Habilitado.";
             const observaciones = data.OBSERVACIONES?.trim();
-            if (!observaciones) {
-              obsBox.innerText = "Equipo fuera de Operación, ya sea por inoperatividad o revisión en taller.";
-            } else {
-              obsBox.innerText = observaciones;
-            }
+            obsBox.innerText = observaciones || "Equipo fuera de Operación, ya sea por inoperatividad o revisión en taller.";
             alerta.style.display = alertaAmarilla.style.display = obsManual.style.display = "none";
           }
         }
@@ -299,35 +295,28 @@
         ? document.getElementById("observaciones-manual").value.trim()
         : document.getElementById("observaciones-equipo").innerText.trim();
       const guardia = document.getElementById("guardia").value.trim();
+
       if (!rut || !nombre || !equipo || !guardia || (!observaciones && habilitado.includes("No habilitado"))) {
         alert("⚠️ Completa todos los campos obligatorios.");
         return;
       }
-      const form = document.createElement("form");
-      form.action = "https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse";
-      form.method = "POST";
-      form.target = "_self";
-      const campos = {
-        "entry.675531615": rut,
-        "entry.851525222": nombre,
-        "entry.1413809422": equipo,
-        "entry.783685052": familia,
-        "entry.10343893": habilitado,
-        "entry.2133373249": observaciones,
-        "entry.234162856": guardia
-      };
-      for (let name in campos) {
-        const input = document.createElement("input");
-        input.type = "hidden";
-        input.name = name;
-        input.value = campos[name];
-        form.appendChild(input);
-      }
-      document.body.appendChild(form);
-      form.submit();
-      setTimeout(() => {
-        window.location.href = "https://acciona-airport.github.io/Ingresos-base-acciona/";
-      }, 1000);
+
+      const formData = new FormData();
+      formData.append("entry.675531615", rut);
+      formData.append("entry.851525222", nombre);
+      formData.append("entry.1413809422", equipo);
+      formData.append("entry.783685052", familia);
+      formData.append("entry.10343893", habilitado);
+      formData.append("entry.2133373249", observaciones);
+      formData.append("entry.234162856", guardia);
+
+      fetch("https://docs.google.com/forms/d/e/1FAIpQLSf3ADvFtCeFHlm7RzOtNuuuxZkzjCgFnrvw7KM2d3DIPOGumg/formResponse", {
+        method: "POST",
+        mode: "no-cors",
+        body: formData
+      });
+
+      window.location.href = "https://acciona-airport.github.io/Ingresos-base-acciona/";
     }
   </script>
 </body>
